<resources>
    <string name="app_name">THW Theorie</string>

    <string name="main_menu_specific_theme">Ein konkretes Thema lernen</string>
    <string name="main_menu_example_test">Beispiel Test lernen</string>
    <string name="main_menu_learn_wrong_answered_questions">Falsch Beantwortete Fragen lernen</string>
    <string name="main_menu_tooltip_specific_theme">Lerne nur Fragen aus einem der 10 Bereiche</string>
    <string name="main_menu_tooltip_example_test">40 zufällige Fragen aus allen Themen</string>
    <string name="main_menu_tooltip_learn_wrong_answered_questions">Lerne Fragen die Du das letzte mal Falsch beantwortet hattest</string>
    <string name="main_menu_toast_error">Sry offenbar hast Du noch keine Fehler gemacht.</string>
    <string name="main_menu_personalize">Personalisiert lernen</string>
    <string name="main_menu_tooltip_personalize">Wähle aus Was Du Wie Lernen willst</string>



    <string name="choose_theme_one">Lernabschnitt 1</string>
    <string name="choose_theme_two">Lernabschnitt 2</string>
    <string name="choose_theme_three">Lernabschnitt 3</string>
    <string name="choose_theme_four">Lernabschnitt 4</string>
    <string name="choose_theme_five">Lernabschnitt 5</string>
    <string name="choose_theme_six">Lernabschnitt 6</string>
    <string name="choose_theme_seven">Lernabschnitt 7</string>
    <string name="choose_theme_eight">Lernabschnitt 8</string>
    <string name="choose_theme_nine">Lernabschnitt 9</string>
    <string name="choose_theme_ten">Lernabschnitt 10</string>


    <string name="theroy_next">Nächste Frage</string>
    <string name="theroy_check">Überprüfen</string>


    <string name="main_toolbar_menu_item_one">GitHub</string>
    <string name="main_toolbar_menu_item_two">Über diese App</string>


    <string name="placeholder">Platzhalter</string>


    <string name="activity_personalize_next_round_examMode">Prüfung</string>
    <string name="activity_personalize_next_round_tooltip_examMode">Beantworte 40 zufällige Fragen aus den gewählten Themen</string>

    <string name="activity_personalize_next_round_rndMode">Zufall</string>
    <string name="activity_personalize_next_round_tooltip_rndMode">Beantworte die Fragen in zufälliger Reihenfolge</string>


    <string name="activity_personalize_next_round_start">Start</string>
    <string name="activity_personalize_next_round_tooltip_start">Beginne zu Lernen</string>

</resources>