<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RAL5002"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingEnd="5dp"
    android:paddingRight="5dp"
    tools:context=".PersonalizeNextRound">

    <Button
        android:id="@+id/button13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lightgrey"
        android:onClick="startLearning"
        android:paddingStart="24dp"
        android:text="@string/activity_personalize_next_round_start"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:tooltipText="@string/activity_personalize_next_round_tooltip_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/personalize_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_checkbox"
        android:choiceMode="multipleChoice"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_checkbox"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/activity_personalize_next_round_exammode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:text="@string/activity_personalize_next_round_examMode"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:tooltipText="@string/activity_personalize_next_round_tooltip_examMode" />

        <Switch
            android:id="@+id/activity_personalize_next_round_rndmode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:text="@string/activity_personalize_next_round_rndMode"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:tooltipText="@string/activity_personalize_next_round_tooltip_rndMode" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>